assets/styles/partials/header/_navigation.scss
@use '../../colors';
@use '../../media';
@use '../../typography';
@use '../../utilities';

// --------------------------------------------------
//
// # Navigation
//   Styles to apply directly to `views/datastore/partials/_navigation.erb`.
//
// ## Table of Contents
//   1. Variables
//   2. Navigation
//     2.1 Anchors
//       2.1.1 Everything
//
// --------------------------------------------------

// ******************** //
// *** 1. VARIABLES *** //
// ******************** //

$breakpoint: 'sm';
$class: 'primary-navigation';





// ********************* //
// *** 2. NAVIGATION *** //
// ********************* //

.#{$class} {
  background: var(--search-color-grey-100);
  border-bottom: 2px solid var(--search-color-grey-300);
  @media print {
    display: none;
  }
  ul {
    @include utilities.flex($align: stretch, $wrap: true, $responsive: $breakpoint);
    & {
      gap: 0;
    }
    @include media.breakpoint($breakpoint) {
      justify-content: center;
    }
    li + li {
      border-top: 1px solid var(--search-color-grey-300);
      @include media.breakpoint($breakpoint) {
        border-top: 0;
      }
    }
  }
}



// *               * //
// * 2.1. ANCHORS  * //
// *               * //

.#{$class} a {
  border: 0 solid transparent;
  border-width: 0 0 0 3px;
  display: block;
  gap: 0.25rem;
  height: 100%;
  padding: .5rem 1rem;
  @include media.breakpoint($breakpoint) {
    border-width: 0 0 3px 0;
  }
  &[aria-current="page"] {
    border-color: currentColor;
  }
  &:not([aria-current="page"]) {
    color: colors.$color-text;
  }
}

// * 2.1.1 EVERYTHING  * //

.#{$class} a.#{$class}__everything {
  @include utilities.flex();
  & {
    gap: 0.25rem;
    line-height: 1;
  }
  &:before {
    @include typography.icon($fill: true);
    & {
      content: "\e871"; // dashboard
      font-size: 1.25rem;
    }
  }
  &:not([aria-current="page"]):before {
    color: var(--search-color-grey-400);
  }
}

